print overflow not showing fixed

--- a/vue-resume/css/print.css
+++ b/vue-resume/css/print.css
@@ -5,6 +5,9 @@ main{
     overflow: visible !important;
     border:none !important;
 }
+.page{
+    overflow: visible !important;
+}
 .disappearPrint{
     display: none;
 }
